Changes in @NEW@:
  o Bug fixes:

  o Documentation Changes:
    * Incorrect references to createGroup have been fixed. (CNY-1700)

Changes in 1.1.27:
  o New Features:
    * All group cooks for one source must be done as a large cvc cook
      action instead of one-by-one. (CNY-1303)
    * Group flavors are much shorter if you turn on the config item
      "shortenGroupFlavors".  Some flags, like
      vmware and xen and architecture flags, are always included in a
      group flavor. (CNY-1641)
    * The Conary client is now able to access the network using
      authenticated HTTP proxies. (CNY-1687)

  o Build Changes:
    * A new recipe method, r.MakeFIFO(), is available which will create
      a named pipe at a specified location. (CNY-1597).

  o Internal Changes:
    * Flags for update jobs changed from a bitmask to a class.
    * Removed vestigial support for file label priority paths.

  o Bug fixes:
    * Patch code no longer fails when trailing context is missing at
      the end of the file. (CNY-1638)
    * Files with no permissions set (chmod 0) confused Conary due to
      improper checks for None. (CNY-1678)
    * Errors in the changeset downloading code are no longer ignored
      by the client. (CNY-1682)
    * An error in the resumption of a build has been fixed. (CNY-1684)
    * The introduction of mirrorMode during changeset cration (CNY-1570)
      caused the generation of empty diffs in some cases. mirrorMode now
      includes full contents for all files instead of generating diffs
      (CNY-1699)

Changes in 1.1.26:
  o New Features:
    * The listcachedir script has been added to help with maintenance
      tasks for the repository changeset cache. (CNY-1469)
    * Conary proxies are now adding an HTTP Via: header. (CNY-1604)

  o Internal Changes:
    * Creating changesets supports a 'mirrorMode', which includes file
      contents of files if their version has changed (even if the sha1